<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="football_score_app">Football Scores</string>
    <string name="library_app">Library</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="Make_your_app_material">XYZ Reader</string>
    <string name="capstone">Capstone</string>
</resources>
