<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/indigo_100">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView style="@style/AppTheme"
            android:text="@string/main_title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_headline_material"
            android:id="@+id/textView" />

        <Button style="@style/AppTheme"
            android:text="@string/popular_movies"
            android:id="@+id/button_popular_movies"
            android:layout_below="@+id/textView"
            android:layout_marginTop="23dp"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:textColor="@color/grey_50"
            android:background="@color/orange_800"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_button_material"
            android:onClick="clickButton" />

        <Button style="@style/AppTheme"
            android:text="@string/football_score_app"
            android:id="@+id/button_football_score_app"
            android:layout_marginTop="15dp"
            android:textColor="@color/grey_50"
            android:background="@color/orange_800"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_button_material"
            android:layout_below="@+id/button_popular_movies"
            android:layout_alignLeft="@+id/button_popular_movies"
            android:layout_alignStart="@+id/button_popular_movies"
            android:layout_alignRight="@+id/button_popular_movies"
            android:layout_alignEnd="@+id/button_popular_movies"
            android:onClick="clickButton" />

        <Button style="@style/AppTheme"
            android:text="@string/library_app"
            android:id="@+id/library_app"
            android:layout_marginTop="12dp"
            android:textColor="@color/grey_50"
            android:background="@color/orange_800"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_button_material"
            android:layout_below="@+id/button_football_score_app"
            android:layout_alignLeft="@+id/button_football_score_app"
            android:layout_alignStart="@+id/button_football_score_app"
            android:layout_alignRight="@+id/button_football_score_app"
            android:layout_alignEnd="@+id/button_football_score_app"
            android:onClick="clickButton" />

        <Button style="@style/AppTheme"
            android:text="@string/build_it_bigger"
            android:id="@+id/build_it_bigger"
            android:layout_marginTop="15dp"
            android:textColor="@color/grey_50"
            android:background="@color/orange_800"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_button_material"
            android:layout_below="@+id/library_app"
            android:layout_alignLeft="@+id/library_app"
            android:layout_alignStart="@+id/library_app"
            android:layout_alignRight="@+id/library_app"
            android:layout_alignEnd="@+id/library_app"
            android:onClick="clickButton" />

        <Button style="@style/AppTheme"
            android:text="@string/Make_your_app_material"
            android:id="@+id/Make_your_app_material"
            android:layout_marginTop="15dp"
            android:textColor="@color/grey_50"
            android:background="@color/orange_800"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_button_material"
            android:layout_below="@+id/build_it_bigger"
            android:layout_alignLeft="@+id/build_it_bigger"
            android:layout_alignStart="@+id/build_it_bigger"
            android:layout_alignRight="@+id/build_it_bigger"
            android:layout_alignEnd="@+id/build_it_bigger"
            android:onClick="clickButton" />

        <Button style="@style/AppTheme"
            android:text="@string/capstone"
            android:id="@+id/capstone"
            android:layout_marginTop="15dp"
            android:textColor="@color/grey_50"
            android:background="@color/pink_700"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_button_material"
            android:layout_below="@+id/Make_your_app_material"
            android:layout_alignLeft="@+id/Make_your_app_material"
            android:layout_alignStart="@+id/Make_your_app_material"
            android:layout_alignRight="@+id/Make_your_app_material"
            android:layout_alignEnd="@+id/Make_your_app_material"
            android:onClick="clickButton" />

    </RelativeLayout>
</ScrollView>